tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,11): error TS2755: No overload matches this call.
  Overload 1 of 3, '(iterable: Iterable<readonly [string, boolean]>): Map<string, boolean>', gave the following error.
    Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'Iterable<readonly [string, boolean]>'.
      Types of property '[Symbol.iterator]' are incompatible.
        Type '() => IterableIterator<[string, number] | [string, true]>' is not assignable to type '() => Iterator<readonly [string, boolean]>'.
          Type 'IterableIterator<[string, number] | [string, true]>' is not assignable to type 'Iterator<readonly [string, boolean]>'.
            Types of property 'next' are incompatible.
              Type '(value?: any) => IteratorResult<[string, number] | [string, true]>' is not assignable to type '(value?: any) => IteratorResult<readonly [string, boolean]>'.
                Type 'IteratorResult<[string, number] | [string, true]>' is not assignable to type 'IteratorResult<readonly [string, boolean]>'.
                  Type '[string, number] | [string, true]' is not assignable to type 'readonly [string, boolean]'.
                    Type '[string, number]' is not assignable to type 'readonly [string, boolean]'.
                      Types of property '1' are incompatible.
                        Type 'number' is not assignable to type 'boolean'.
  Overload 2 of 3, '(entries?: readonly (readonly [string, boolean])[]): Map<string, boolean>', gave the following error.
    Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! error TS2755:   Overload 1 of 3, '(iterable: Iterable<readonly [string, boolean]>): Map<string, boolean>', gave the following error.
!!! error TS2755:     Argument of type '([string, number] | [string, true])[]' is not assignable to parameter of type 'Iterable<readonly [string, boolean]>'.
!!! error TS2755:       Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2755:         Type '() => IterableIterator<[string, number] | [string, true]>' is not assignable to type '() => Iterator<readonly [string, boolean]>'.
!!! error TS2755:           Type 'IterableIterator<[string, number] | [string, true]>' is not assignable to type 'Iterator<readonly [string, boolean]>'.
!!! error TS2755:             Types of property 'next' are incompatible.
!!! error TS2755:               Type '(value?: any) => IteratorResult<[string, number] | [string, true]>' is not assignable to type '(value?: any) => IteratorResult<readonly [string, boolean]>'.
!!! error TS2755:                 Type 'IteratorResult<[string, number] | [string, true]>' is not assignable to type 'IteratorResult<readonly [string, boolean]>'.
!!! error TS2755:                   Type '[string, number] | [string, true]' is not assignable to type 'readonly [string, boolean]'.
!!! error TS2755:                     Type '[string, number]' is not assignable to type 'readonly [string, boolean]'.
!!! error TS2755:                       Types of property '1' are incompatible.
!!! error TS2755:                         Type 'number' is not assignable to type 'boolean'.
!!! error TS2755:   Overload 2 of 3, '(entries?: readonly (readonly [string, boolean])[]): Map<string, boolean>', gave the following error.
!!! error TS2755:     Type 'number' is not assignable to type 'boolean'.
    for (var [k, v] of map) {
        k;
        v;
    }